Fixed: Login area is out of screen in responsive mode (bug#14578).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
@@ -1452,6 +1452,10 @@ did not receive this file, see https://www.gnu.org/licenses/gpl-3.0.txt.
     /*
      * @subsection Responsive classes
      */
+    .LoginBox, #PasswordBox {
+        width: 320px;
+    }
+
     .ScreenS {
         display: block !important;
     }
